PA-4650: Translate due date status

--- a/static/i18n/de-DE/translations.json
+++ b/static/i18n/de-DE/translations.json
@@ -1,4 +1,10 @@
 {
     "Cancel": "Abbrechen",
-    "Close": "Schließen"
+    "Close": "Schließen",
+    "{{ count }} day": "{{ count }} Tag",
+    "{{ count }} day_plural": "{{ count }} Tage",
+    "On Time": "Planmäßig",
+    "Delayed": "Verzögert",
+    "At Risk": "Gefährdet",
+    "Inapplicable": "Nicht anwendbar"
 }
