PA-4779: Add German to rtf editor

--- a/static/i18n/de-DE/translations.json
+++ b/static/i18n/de-DE/translations.json
@@ -1,6 +1,7 @@
 {
     "Cancel": "Abbrechen",
     "Close": "Schließen",
+    "Save": "Speichern",
     "{{ count }} day": "{{ count }} Tag",
     "{{ count }} day_plural": "{{ count }} Tage",
     "On Time": "Planmäßig",
