PA-4800: Add missing translation

--- a/static/i18n/de-DE/translations.json
+++ b/static/i18n/de-DE/translations.json
@@ -7,5 +7,6 @@
     "On Time": "Planmäßig",
     "Delayed": "Verzögert",
     "At Risk": "Gefährdet",
-    "Inapplicable": "Nicht anwendbar"
+    "Inapplicable": "Nicht anwendbar",
+    "Text exceeds maximum valid size!": "Der Text überschreitet die maximale Zeichenanzahl!"
 }
