--- a/static/i18n/en-US/translations.json
+++ b/static/i18n/en-US/translations.json
@@ -10,5 +10,9 @@
     "Inapplicable": "Inapplicable",
     "Text exceeds maximum valid size!": "Text exceeds maximum valid size!",
     "On track": "On track",
-    "At risk": "At risk"
+    "At risk": "At risk",
+    "Leave without saving?": "Leave without saving?",
+    "Don't save": "Don't save",
+    "Save now": "Save now",
+    "All your changes in the text field will be lost.": "All your changes in the text field will be lost."
 }
