--- a/static/i18n/de-DE/translations.json
+++ b/static/i18n/de-DE/translations.json
@@ -11,8 +11,8 @@
     "Text exceeds maximum valid size!": "Der Text überschreitet die maximale Zeichenanzahl!",
     "On track": "Planmäßig",
     "At risk": "Gefährdet",
-    "Leave without saving?": "Änderungen speichern?",
+    "Do you want to save the changes?": "Möchten Sie die Änderungen speichern?",
     "Don't save": "Nicht speichern",
-    "Save now": "Jetzt speichern",
-    "All your changes in the text field will be lost.": "Alle Änderungen im Textfeld gehen verloren."
+    "Save changes": "Änderungen speichern",
+    "Otherwise your changes will not be saved.": "Ihre Änderungen im Textfeld werden sonst nicht gespeichert."
 }
