PA-6817: Move `SortBox` to "Selection Menus" category

--- a/storybook/stories/components/selection-menus/sort-box/sort-box.stories.mdx
+++ b/storybook/stories/components/selection-menus/sort-box/sort-box.stories.mdx
@@ -1,11 +1,11 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks'
 
-import { SortBox } from '../../../../src'
-import { decorators } from '../../decorators'
+import { SortBox } from '../../../../../src'
+import { decorators } from '../../../decorators'
 import { SortBoxWithSampleList } from './sort-box-with-sample-list'
 
 <Meta
-  title="Components/SortBox"
+  title="Components/Selection Menus/SortBox"
   component={SortBox}
   decorators={decorators}
 />
