PA-6817: Add story for icon buttons

--- a/storybook/stories/components/buttons/buttons.stories.mdx
+++ b/storybook/stories/components/buttons/buttons.stories.mdx
@@ -4,7 +4,7 @@ import { decorators } from '../../decorators'
 import { renderButtons } from './render-buttons'
 
 <Meta
-  title="Components/Buttons"
+  title="Components/Buttons/Contained"
   decorators={decorators}
 />
 
