PA-6817: Add more stories

--- a/storybook/stories/components/date-picker/date-picker.stories.mdx
+++ b/storybook/stories/components/date-picker/date-picker.stories.mdx
@@ -33,6 +33,7 @@ export const TemplateDatePicker = (args) => {
   )
 }
 
+# Date Picker Button
 <Story
   name="Date Picker Button"
   args={{}}
@@ -40,6 +41,7 @@ export const TemplateDatePicker = (args) => {
   {TemplateDatePickerButton.bind({})}
 </Story>
 
+# Date Picker
 <Story
   name="Date Picker"
   args={{}}
