--- a/storybook/stories/components/labels/labels.stories.mdx
+++ b/storybook/stories/components/labels/labels.stories.mdx
@@ -1,6 +1,7 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks'
 import { Grid } from '@material-ui/core'
 import { Badge } from '../../../../src'
+import { DueDateStatus, DUE_DATE_STATUS } from '../../../../src/components'
 
 import { decorators } from '../../decorators'
 
@@ -21,9 +22,30 @@ export const TemplateBadges = (args) => (
 )
 
 export const TemplateTimeStatus = (args) => (
-  <Grid container direction="column" spacing={1}>
+  <Grid container direction="column" spacing={1} xs={2}>
     <Grid item>
-      TODO: Add as corporate design component
+      <DueDateStatus
+        state={DUE_DATE_STATUS.ON_TIME}
+        delta={0}
+      />
+    </Grid>
+    <Grid item>
+      <DueDateStatus
+        state={DUE_DATE_STATUS.AT_RISK}
+        delta={2}
+      />
+    </Grid>
+    <Grid item>
+      <DueDateStatus
+        state={DUE_DATE_STATUS.OVERDUE}
+        delta={4}
+      />
+    </Grid>
+    <Grid item>
+      <DueDateStatus
+        state={DUE_DATE_STATUS.INAPPLICABLE}
+        delta={0}
+      />
     </Grid>
   </Grid>
 )
