--- a/storybook/stories/components/labels/labels.stories.mdx
+++ b/storybook/stories/components/labels/labels.stories.mdx
@@ -22,26 +22,26 @@ export const TemplateBadges = (args) => (
 )
 
 export const TemplateTimeStatus = (args) => (
-  <Grid container direction="column" spacing={1} xs={2}>
-    <Grid item>
+  <Grid container direction="column" spacing={1}>
+    <Grid item xs={2}>
       <DueDateStatus
         state={DUE_DATE_STATUS.ON_TIME}
         delta={0}
       />
     </Grid>
-    <Grid item>
+    <Grid item xs={2}>
       <DueDateStatus
         state={DUE_DATE_STATUS.AT_RISK}
         delta={2}
       />
     </Grid>
-    <Grid item>
+    <Grid item xs={2}>
       <DueDateStatus
         state={DUE_DATE_STATUS.OVERDUE}
         delta={4}
       />
     </Grid>
-    <Grid item>
+    <Grid item xs={2}>
       <DueDateStatus
         state={DUE_DATE_STATUS.INAPPLICABLE}
         delta={0}
