PA-6817: Add TODO stories

--- a/storybook/stories/components/selection-menus/sorting/sorting.stories.mdx
+++ b/storybook/stories/components/selection-menus/sorting/sorting.stories.mdx
@@ -5,7 +5,7 @@ import { decorators } from '../../../decorators'
 import { SortBoxWithSampleList } from './sort-box-with-sample-list'
 
 <Meta
-  title="Components/Selection Menus/SortBox"
+  title="Components/Selection Menus/Sorting"
   component={SortBox}
   decorators={decorators}
 />
