PA-6817: Show one component per category, show one component state per story

--- a/storybook/stories/components/buttons/button-icons.stories.mdx
+++ b/storybook/stories/components/buttons/button-icons.stories.mdx
@@ -14,7 +14,7 @@ export const Template = (args = {}) => (
 
 # Button Icons
 <Story
-  name="Button Icons"
+  name="Default"
   args={{}}
 >
   {Template.bind({})}
