--- a/storybook/stories/components/cards/cards.stories.mdx
+++ b/storybook/stories/components/cards/cards.stories.mdx
@@ -3,7 +3,7 @@ import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks'
 import { decorators } from '../../decorators'
 
 <Meta
-  title="Components/Cards"
+  title="Components/Cards/Project"
   decorators={decorators}
 />
 
@@ -12,7 +12,7 @@ export const Template = (args) => <div {...args} />
 # TODO
 
 <Story
-  name="Cards"
+  name="Default"
   args={{}}
 >
   {Template.bind({})}
