--- a/storybook/stories/components/dialogs/dialogs.stories.mdx
+++ b/storybook/stories/components/dialogs/dialogs.stories.mdx
@@ -3,16 +3,14 @@ import { Meta, Story } from '@storybook/addon-docs/blocks'
 import { decorators } from '../../decorators'
 
 <Meta
-  title="Components/Dialogs"
+  title="Components/Dialogs/Edit Assignment"
   decorators={decorators}
 />
 
-export const Template = (args) => <div {...args} />
-
-# TODO
+export const Template = (args) => <div {...args}>TODO</div>
 
 <Story
-  name="Dialogs"
+  name="Default"
   args={{}}
 >
   {Template.bind({})}
