--- a/storybook/stories/components/lists/lists.stories.mdx
+++ b/storybook/stories/components/lists/lists.stories.mdx
@@ -3,7 +3,7 @@ import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks'
 import { decorators } from '../../decorators'
 
 <Meta
-  title="Components/Lists & List titles"
+  title="Components/Lists & List titles/Task Tile"
   decorators={decorators}
 />
 
@@ -13,10 +13,10 @@ export const Template = (args) => (
   </div>
 )
 
-# Lists
+# Task Tile
 
 <Story
-  name="List"
+  name="Default"
   args={{}}
 >
   {Template.bind({})}
