--- a/storybook/stories/components/modals/confirmation-dialog.stories.mdx
+++ b/storybook/stories/components/modals/confirmation-dialog.stories.mdx
@@ -1,19 +1,16 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks'
-import { Grid } from '@material-ui/core'
 
 import { decorators } from '../../decorators'
+import { ConfirmationDialogWithState } from './confirmation-dialog'
 
 <Meta
-  title="Components/Toggle/Toggle Button"
+  title="Components/Modals/Confirmation Dialog"
   decorators={decorators}
 />
-
-export const Template = (args) => <div {...args}> TODO </div>
 
 <Story
   name="Default"
   args={{}}
 >
-  {Template.bind({})}
+  {ConfirmationDialogWithState.bind({})}
 </Story>
-
