--- a/storybook/stories/components/pagination/pagination.stories.mdx
+++ b/storybook/stories/components/pagination/pagination.stories.mdx
@@ -4,7 +4,7 @@ import { Grid } from '@material-ui/core'
 import { decorators } from '../../decorators'
 
 <Meta
-  title="Components/Pagination"
+  title="Components/Pagination/Page Numbers"
   decorators={decorators}
 />
 
@@ -16,10 +16,8 @@ export const Template = (args) => (
   </Grid>
 )
 
-# TODO
-
 <Story
-  name="Pagination"
+  name="Default"
   args={{}}
 >
   {Template.bind({})}
