--- a/storybook/stories/components/selection-menus/search/search.stories.mdx
+++ b/storybook/stories/components/selection-menus/search/search.stories.mdx
@@ -12,7 +12,7 @@ export const Template = (args) => <div />
 # TODO
 
 <Story
-  name="Search"
+  name="Default"
   args={{}}
 >
   {Template.bind({})}
