--- a/storybook/stories/components/selection-menus/sorting/sorting.stories.mdx
+++ b/storybook/stories/components/selection-menus/sorting/sorting.stories.mdx
@@ -24,4 +24,5 @@ It returns the filtered list and selected sort criteria via a callback.
   {Template.bind({})}
 </Story>
 
+# Component API
 <ArgsTable of={SortBox} />
