--- a/storybook/stories/components/sidebar/global-navigation.stories.mdx
+++ b/storybook/stories/components/sidebar/global-navigation.stories.mdx
@@ -1,9 +1,9 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks'
 
-import { decorators } from '../../../decorators'
+import { decorators } from '../../decorators'
 
 <Meta
-  title="Components/Selection Menus/Status"
+  title="Components/Sidebar/Global Navigation"
   decorators={decorators}
 />
 
