--- a/storybook/stories/components/date-picker/date-picker.stories.mdx
+++ b/storybook/stories/components/date-picker/date-picker.stories.mdx
@@ -1,30 +1,14 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks'
 import { actions } from '@storybook/addon-actions'
 
-import { DatePickerButton, ChangeOnAcceptDatePicker } from '../../../../src/date-pickers'
+import { ChangeOnAcceptDatePicker } from '../../../../src/date-pickers'
 
 import { decorators } from '../../decorators'
 
 <Meta
-  title="Components/Date Pickers"
+  title="Components/Date Pickers/Date Picker"
   decorators={decorators}
 />
-
-export const TemplateDatePickerButton = (args) => {
-  const onSelectDate = actions('onSelectDate')
-  return (
-    <DatePickerButton
-      {...args}
-      pickerProps={{
-        value: '2020-10-25',
-      }}
-      renderButton={showPicker => (
-        <button onClick={showPicker}>Show Picker</button>
-      )}
-      {...onSelectDate}
-    />
-  )
-}
 
 export const TemplateDatePicker = (args) => {
   const onSelectDate = actions('onSelectDate')
@@ -33,17 +17,9 @@ export const TemplateDatePicker = (args) => {
   )
 }
 
-# Date Picker Button
-<Story
-  name="Date Picker Button"
-  args={{}}
->
-  {TemplateDatePickerButton.bind({})}
-</Story>
-
 # Date Picker
 <Story
-  name="Date Picker"
+  name="Default"
   args={{}}
 >
   {TemplateDatePicker.bind({})}
