--- a/storybook/stories/components/errors/error-box.stories.mdx
+++ b/storybook/stories/components/errors/error-box.stories.mdx
@@ -6,19 +6,9 @@ import { ErrorComponent } from '../../../../src'
 import { decorators } from '../../decorators'
 
 <Meta
-  title="Components/Errors"
+  title="Components/Errors/Error Box"
   decorators={decorators}
 />
-
-export const TemplateErrorBoundary = (args) => (
-  <ErrorComponent
-    {...args}
-    title="Some Error"
-    description="Some error description"
-  >
-    Custom content
-  </ErrorComponent>
-)
 
 export const TemplateErrorBox = (args) => (
   <Paper style={{ width: '600px', padding: '50px', display: 'flex' }}>
@@ -26,17 +16,9 @@ export const TemplateErrorBox = (args) => (
   </Paper>
 )
 
-# Error Boundary
-<Story
-  name="Error Boundary"
-  args={{}}
->
-  {TemplateErrorBoundary.bind({})}
-</Story>
-
 # Error Box
 <Story
-  name="Error Box"
+  name="Default"
   args={{}}
 >
   {TemplateErrorBox.bind({})}
