--- a/storybook/stories/components/icons/icons.stories.mdx
+++ b/storybook/stories/components/icons/icons.stories.mdx
@@ -5,7 +5,7 @@ import { WarningIcon, WarningIconWithTooltip } from '../../../../src/icons'
 import { decorators } from '../../decorators'
 
 <Meta
-  title="Components/Icons"
+  title="Components/Icons/Showcase"
   decorators={decorators}
 />
 
@@ -24,7 +24,7 @@ export const Template = (args) => (
 
 # Icons
 <Story
-  name="Icons"
+  name="Default"
   args={{}}
 >
   {Template.bind({})}
