--- a/storybook/stories/components/tabbed-navigation/tab-bar.stories.mdx
+++ b/storybook/stories/components/tabbed-navigation/tab-bar.stories.mdx
@@ -1,20 +1,12 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks'
-import { Grid } from '@material-ui/core'
 
 import { decorators } from '../../decorators'
 import { TabBarWithDefaultState } from './tab-bar'
 
 <Meta
-  title="Components/Tabbed Navigation"
+  title="Components/Tabbed Navigation/Tab Bar"
   decorators={decorators}
 />
-
-export const Template = (args) => (
-  <Grid container direction="column" spacing={1}>
-    <Grid item>
-    </Grid>
-  </Grid>
-)
 
 # Default
 
